<resources>
    <string name="app_name">OnlineMarket</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="countryNames">
        <item>--Select your country--</item>
        <item>  Italy</item>
        <item>  Turkey</item>
        <item>  United Kingdom</item>
        <item>  Republic of Uganda</item>
    </string-array>

    <string-array name="cityNamesItaly">
        <item>--Select your city--</item>
        <item>  Roma</item>
        <item>  Milano</item>
    </string-array>

    <string-array name="zoneNamesRoma">
        <item>--Select your zone--</item>
        <item>  Prati, Borgo, Mazzini, Delle Vittorie</item>
        <item>  Parioli, Flaminio</item>
        <item>  Salario, Trieste</item>
        <item>  Bologna, Policlinico</item>
        <item>  Termini, Repubblica</item>
        <item>  Pigneto, San Lorenzo, Casal Bertone</item>
        <item>  Re di Roma, San Giovanni</item>
        <item>  Appio Latino, Colli Albani</item>
        <item>  Garbatella, Navigatori, Ostiense</item>
        <item>  Marconi, San Paolo</item>
        <item>  Testaccio, Trastevere</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_product">Products</string>

    <string name="tab_text_1">Food</string>
    <string name="tab_text_2">Grocery</string>
    <string name="tab_text_3">Meat and Fish</string>
    <string name="tab_text_4">Frozen Food</string>
    <string name="tab_text_5">Dairy Products</string>
    <string name="tab_text_6">Drink</string>
    <string name="tab_text_7">Alcohol</string>
    <string name="tab_text_8">Personal Care</string>
    <string name="tab_text_9">Cleaning Products</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="productsTitle">Product Categories</string>
    <string name="priceTitle">Total Price:</string>
    <string name="selectedItemTitle">Selected Items:</string>
    <string name="admin_page_label">Admin Page</string>
    <string name="account_settings_label">Account Settings</string>
    <string name="communicate_label">Communicate</string>
    <string name="sharelabel">Share</string>
    <string name="log_out_label">Log Out</string>
    <string name="zeroEuroLabel">0 €</string>
    <string name="alert_goback">Are you sure that you want to exit? \nItems in your cart will be removed!</string>
    <string name="alert_chooseProduct">You have not choosen any product!</string>

    <!-- Strings related to order details -->
    <string name="blank"></string>
    <string name="my_order">MY ORDER</string>
    <string name="user_details">User Details</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="user_address">User Address</string>
    <string name="user_city">User City</string>

    <string name="user_name_label">Name:</string>
    <string name="user_email_label">Email:</string>
    <string name="user_address_label">Address:</string>
    <string name="user_city_label">City:</string>

    <string name="order_details">Order Details</string>
    <string name="company">Company</string>
    <string name="order_total">Total: </string>
    <string name="total">Order Total</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_confirmed">Order Confirmed!</string>
    <string name="your_order">Your order will be with you soon!</string>
    <string name="back">Back</string>

</resources>
