<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Admin"
            android:icon="@drawable/admin"
            android:title="@string/admin_page_label"
            android:visible="false"/>
        <item
            android:id="@+id/nav_OrderHistory"
            android:icon="@drawable/basket1"
            android:title="@string/orderHistory"
            android:visible="true"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/account_settings_label" />
    </group>

    <item android:title="@string/communicate_label">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/sharelabel" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/log_out_label" />
        </menu>
    </item>

</menu>
