<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <View
            android:layout_marginBottom="8dp"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/colorAccent" />

        <!-- TextView and other stuff -->
        <TextView
            android:id="@+id/user_details"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-thin"
            android:paddingStart="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:text="@string/my_order"
            android:textAlignment="viewStart"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/colorAccent" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/user_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorAccent"
                android:text="@string/user_name_label" />
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:text="@string/user_name" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/user_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorAccent"
                android:text="@string/user_email_label" />
            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/user_email" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/user_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorAccent"
                android:text="@string/user_address_label" />
            <TextView
                android:id="@+id/user_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/user_address" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/user_city_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorAccent"
                android:text="@string/user_city_label" />
            <TextView
                android:id="@+id/user_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/user_city" />
        </RelativeLayout>
        <View
            android:layout_marginTop="8dp"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/colorAccent" />
        <TextView
            android:id="@+id/order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/order_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_city" />

        <TextView
            android:id="@+id/company_name_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/company"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order" />

        <ListView
            android:id="@+id/order_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/order_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:textSize="25sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:text="@string/order_total" />
            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/total" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:text="@string/confirm_order"/>
        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>