<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderConfirmed">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <View
            android:layout_marginBottom="8dp"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/colorAccent" />

        <!-- TextView and other stuff -->
        <TextView
            android:id="@+id/order_confirmed"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-thin"
            android:paddingStart="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:text="@string/order_confirmed"
            android:textAlignment="viewStart"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/your_order"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-thin"
            android:paddingStart="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            android:text="@string/your_order"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/back"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>