<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ProductActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/productsTitle">

            </android.support.v7.widget.Toolbar>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabIndicatorColor="@color/colorWhite">

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TabLayout>

        </android.support.design.widget.AppBarLayout>


        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        </android.support.v4.view.ViewPager>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pricaLabel"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:paddingStart="70dp"
                android:text="@string/priceTitle"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:paddingTop="2dp"/>
            <TextView
                android:id="@+id/priceText"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:paddingTop="2dp"
                android:text="@string/zeroEuroLabel"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:paddingStart="70dp"
                android:text="@string/selectedItemTitle"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"

                android:text="0"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        app:backgroundTint="@color/colorWhite"
        app:layout_anchor="@+id/linearLayout2"
        app:layout_anchorGravity="right|bottom"
        app:srcCompat="@drawable/basket1" />




</android.support.design.widget.CoordinatorLayout>